* Fixed Visualization of side-bar on tablet

--- a/src/app/header/navigator/navigator.component.css
+++ b/src/app/header/navigator/navigator.component.css
@@ -114,7 +114,7 @@ a:hover {
   justify-content: space-between;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768px) {
 
   .nav {
     position: fixed;
